add valorant game link

--- a/index.html
+++ b/index.html
@@ -61,6 +61,16 @@
                 />
               </a>
             </li>
+            <li>
+              <a
+                target="_blank"
+                href="https://www.twitch.tv/directory/game/VALORANT"
+              >
+                <img
+                src=https://static-cdn.jtvnw.net/ttv-boxart/516575-188x250.jpg"
+                alt="imagem do jogo League Legends Wild Rift" />
+              </a>
+            </li>
           </ul>
         </div>
       </section>
